--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is a git test.</h1>
-    <h2>THere is an update to this</h2>
+    <h2>From a test branch </h2>
 </body>
 
 </html>
