trying to do exclude 1 file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>This is a git test.</h1>
-    <h2>THere is an update to this</h2>
+    <h2>THere is an update to this <br>
+    lets hope excludethis is not p there</h2>
 </body>
 
 </html>
