trying to upload index.html and not ignorethis.py

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is a git test.</h1>
     <h2>THere is an update to this <br>
-    lets hope excludethis is not p there</h2>
+    lets hope ignorethis is not p there</h2>
 </body>
 
 </html>
